--- a/produto.html
+++ b/produto.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<img src="images/produto_download.jpg" alt="">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias iusto ea vitae laboriosam impedit eos, nihil placeat, illo tempora, repellendus voluptatem rem aliquam nam expedita sunt libero quisquam optio assumenda.</p>
-				<a href="" class="btn">Baixar App</a>
+				<a href="projeto/" class="btn">Baixar App</a>
 			</div>
 		</section>
 		<section class="section section-center" id="funcionalidades">
