--- a/contato.html
+++ b/contato.html
@@ -46,7 +46,7 @@
 
 			<!-- https://github.com/dwyl/html-form-send-email-via-google-script-without-server -->
 			<div class="container">
-				<form class="row" method="POST" action="">
+				<form class="row" method="POST" action="https://script.google.com/macros/s/AKfycbyQw6fBVKK6SbNLsVB912ur2Q1W9qgRmxhLazBTksu9IPg6vUM/exec">
 					<div class="col col-desktop-6 col-6">
 						<div class="input-control">
 							<input type="text" name="nome" id="nome" required placeholder="Nome...">
